# Ouroboros-chat

./: .gitignore  DEPLOY.md  HANDOFF_DUAL_LAYER_TIMEOUT_FIXES_2026-05-22.md  HANDOFF_IMPLEMENTATIE_DEVTEAM_WORKFLOW_2026-05-22.md  HANDOFF_OUROBOROS_CHAT_AIDER_MODE_2026-05-22.md  HANDOFF_OUROBOROS_CHAT_DEVTEAM_LIGHT_MODELS_2026-05-21.md  HANDOFF_OUROBOROS_CHAT_VISIBLE_META_LEAK_2026-05-20.md  PLAN_2.md  README.md  Vergader buildplan.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: start-tauri-nvidia.sh  vite-dev-or-existing.sh
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
