[package]
name = "ouroboros-chat"
version = "0.1.0"
description = "Standalone Ouroboros Chat desktop shell"
authors = ["WintripAI"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-single-instance = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
